force-app/main/default/objects/Enrollment__c/fields/Alternate_Email__c.field-meta.xml
<CustomField>
    <fullName>Alternate_Email__c</fullName>
    <formula>Email__r.Alternate_Email_Address__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Alternate Email</label>
    <type>Text</type>
</CustomField>