force-app/main/default/objects/Enrollment__c/fields/Certification_AchievementDate__c.field-meta.xml
<CustomField>
    <fullName>Certification_AchievementDate__c</fullName>
    <label>Certification AchievementDate</label>
    <type>Date</type>
</CustomField>