force-app/main/default/objects/Enrollment__c/fields/Certification_ExpirationDate__c.field-meta.xml
<CustomField>
    <fullName>Certification_ExpirationDate__c</fullName>
    <label>Certification ExpirationDate</label>
    <type>Date</type>
</CustomField>