force-app/main/default/objects/Enrollment__c/fields/Contact_Name__c.field-meta.xml
<CustomField>
    <fullName>Contact_Name__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Contact Name</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Enrollments</relationshipLabel>
    <relationshipName>Enrollments</relationshipName>
    <type>Lookup</type>
</CustomField>