force-app/main/default/objects/Enrollment__c/fields/Email__c.field-meta.xml
<CustomField>
    <fullName>Email__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Email</label>
    <referenceTo>Alternate_Email__c</referenceTo>
    <relationshipLabel>Enrollments</relationshipLabel>
    <relationshipName>Enrollments</relationshipName>
    <type>Lookup</type>
</CustomField>