force-app/main/default/objects/Enrollment__c/fields/Email_opt_in__c.field-meta.xml
<CustomField>
    <fullName>Email_opt_in__c</fullName>
    <label>Email opt-in</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>