force-app/main/default/objects/Enrollment__c/fields/Enrollment_Type__c.field-meta.xml
<CustomField>
    <fullName>Enrollment_Type__c</fullName>
    <formula>TEXT(Training__r.Enrollment_Type__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Enrollment Type</label>
    <type>Text</type>
</CustomField>