force-app/main/default/objects/Enrollment__c/fields/Exam_Date__c.field-meta.xml
<CustomField>
    <fullName>Exam_Date__c</fullName>
    <label>Exam Date</label>
    <type>Date</type>
</CustomField>