force-app/main/default/objects/Enrollment__c/fields/Exam_Expiration_Date__c.field-meta.xml
<CustomField>
    <fullName>Exam_Expiration_Date__c</fullName>
    <label>Exam Expiration Date</label>
    <type>Date</type>
</CustomField>