force-app/main/default/objects/Enrollment__c/fields/Exam_Status__c.field-meta.xml
<CustomField>
    <fullName>Exam_Status__c</fullName>
    <label>Exam Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>New</fullName>
            </value>
            <value>
                <fullName>Pending</fullName>
            </value>
            <value>
                <fullName>No Pending</fullName>
            </value>
            <value>
                <fullName>Cancelled</fullName>
            </value>
            <value>
                <fullName>Pass</fullName>
            </value>
            <value>
                <fullName>No Pass</fullName>
            </value>
            <value>
                <fullName>Invalidated</fullName>
            </value>
            <value>
                <fullName>Expired</fullName>
            </value>
            <value>
                <fullName>In Appeals</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>