force-app/main/default/objects/Enrollment__c/fields/Ext_Product_Id__c.field-meta.xml
<CustomField>
    <fullName>Ext_Product_Id__c</fullName>
    <externalId>true</externalId>
    <label>Ext Product Id</label>
    <length>250</length>
    <type>Text</type>
</CustomField>