force-app/main/default/objects/Enrollment__c/fields/Is_free__c.field-meta.xml
<CustomField>
    <fullName>Is_free__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is free</label>
    <type>Checkbox</type>
</CustomField>