force-app/main/default/objects/Enrollment__c/fields/Is_Parent_Product_Bootcamp_Campaign__c.field-meta.xml
<CustomField>
    <fullName>Is_Parent_Product_Bootcamp_Campaign__c</fullName>
    <formula>Parent_Product__r.Bootcamp_Campaign__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Parent Product Bootcamp Campaign</label>
    <type>Checkbox</type>
</CustomField>