force-app/main/default/objects/Enrollment__c/fields/isBootcampbundle__c.field-meta.xml
<CustomField>
    <fullName>isBootcampbundle__c</fullName>
    <defaultValue>false</defaultValue>
    <label>isBootcampbundle</label>
    <type>Checkbox</type>
</CustomField>