force-app/main/default/objects/Enrollment__c/fields/Lead_Created_By__c.field-meta.xml
<CustomField>
    <fullName>Lead_Created_By__c</fullName>
    <formula>Lead_Name__r.CreatedBy.FirstName +&apos;&apos;+ Lead_Name__r.CreatedBy.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Lead Created By</label>
    <type>Text</type>
</CustomField>