force-app/main/default/objects/Enrollment__c/fields/Lead_email__c.field-meta.xml
<CustomField>
    <fullName>Lead_email__c</fullName>
    <formula>Lead_Name__r.Email</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Lead Email</label>
    <type>Text</type>
</CustomField>