force-app/main/default/objects/Enrollment__c/fields/Lead_Name__c.field-meta.xml
<CustomField>
    <fullName>Lead_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Lead Name</label>
    <referenceTo>Lead</referenceTo>
    <relationshipLabel>Enrollments</relationshipLabel>
    <relationshipName>Enrollments</relationshipName>
    <type>Lookup</type>
</CustomField>