force-app/main/default/objects/Enrollment__c/fields/Parent_Product__c.field-meta.xml
<CustomField>
    <fullName>Parent_Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Parent Product</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Enrollments (Collection)</relationshipLabel>
    <relationshipName>Enrollments1</relationshipName>
    <type>Lookup</type>
</CustomField>