force-app/main/default/objects/Enrollment__c/fields/Parent_Product_Name__c.field-meta.xml
<CustomField>
    <fullName>Parent_Product_Name__c</fullName>
    <formula>Parent_Product__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Parent Product Name</label>
    <type>Text</type>
</CustomField>