force-app/main/default/objects/Enrollment__c/fields/Percentage_Complete__c.field-meta.xml
<CustomField>
    <fullName>Percentage_Complete__c</fullName>
    <label>Percentage Complete</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>