force-app/main/default/objects/Enrollment__c/fields/PH_not_found__c.field-meta.xml
<CustomField>
    <fullName>PH_not_found__c</fullName>
    <defaultValue>false</defaultValue>
    <label>PH not found</label>
    <type>Checkbox</type>
</CustomField>