force-app/main/default/objects/Enrollment__c/fields/Purchase_Amount__c.field-meta.xml
<CustomField>
    <fullName>Purchase_Amount__c</fullName>
    <description>This is calculated field gets actual price from purchase history and return.</description>
    <formula>Purchase_History__r.Price + Refund_Purchase_History__r.Price</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Use this field if you need accurate price for enrollment.</inlineHelpText>
    <label>Purchase Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>