force-app/main/default/objects/Enrollment__c/fields/Purchase_History__c.field-meta.xml
<CustomField>
    <fullName>Purchase_History__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Purchase History</label>
    <referenceTo>Asset</referenceTo>
    <relationshipLabel>Enrollments</relationshipLabel>
    <relationshipName>Enrollments</relationshipName>
    <type>Lookup</type>
</CustomField>