force-app/main/default/objects/Enrollment__c/fields/Refund_Purchase_History__c.field-meta.xml
<CustomField>
    <fullName>Refund_Purchase_History__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Refund Purchase History</label>
    <referenceTo>Asset</referenceTo>
    <relationshipLabel>Enrollments (Refund Purchase History)</relationshipLabel>
    <relationshipName>Enrollments1</relationshipName>
    <type>Lookup</type>
</CustomField>