force-app/main/default/objects/Enrollment__c/fields/Source__c.field-meta.xml
<CustomField>
    <fullName>Source__c</fullName>
    <label>Source</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Edx</fullName>
            </value>
            <value>
                <fullName>Panorama</fullName>
            </value>
            <value>
                <fullName>SugarCRM</fullName>
            </value>
            <value>
                <fullName>TI</fullName>
            </value>
            <value>
                <fullName>TI SCORM</fullName>
            </value>
            <value>
                <fullName>TI Panorama</fullName>
            </value>
            <value>
                <fullName>TI Other</fullName>
            </value>
            <value>
                <fullName>TI Purchase</fullName>
            </value>
            <value>
                <fullName>QuickStart</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>