force-app/main/default/objects/Enrollment__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <description>Enrolled - Update status for , Course_purchase and when enrollment date is added
Started - Update status for Course_start and when start date is added
Completed -Update status for Course_complete and completed date is added
Expired - If complete date is null and Expired date is in past
Revoked - update for revoke_access
Not started - multiple enrollments when there is an record already with above statuses enrolled, started</description>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Enrolled</fullName>
            </value>
            <value>
                <fullName>Started</fullName>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
            <value>
                <fullName>Expired</fullName>
            </value>
            <value>
                <fullName>Revoked</fullName>
            </value>
            <value>
                <fullName>Not started</fullName>
            </value>
            <value>
                <fullName>Not Certified</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>