force-app/main/default/objects/Enrollment__c/fields/Zebra_Order_Number__c.field-meta.xml
<CustomField>
    <fullName>Zebra_Order_Number__c</fullName>
    <label>Zebra Order Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>