force-app/main/default/objects/Enrollment__c/listViews/Edx.listView-meta.xml
<ListView>
    <fullName>Edx</fullName>
    <columns>NAME</columns>
    <columns>Start_Date__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Product_Name__c</columns>
    <columns>Ext_Product_Id__c</columns>
    <columns>Source__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Source__c</field>
        <operation>equals</operation>
        <value>Edx</value>
    </filters>
    <filters>
        <field>CREATED_DATE</field>
        <operation>equals</operation>
        <value>LAST_N_DAYS:7</value>
    </filters>
    <label>Edx</label>
</ListView>