force-app/main/default/objects/Enrollment__c/listViews/Enrollments_for_a_Training_Session.listView-meta.xml
<ListView>
    <fullName>Enrollments_for_a_Training_Session</fullName>
    <columns>Contact_Name__c</columns>
    <columns>Training__c</columns>
    <columns>Zebra_Order_Number__c</columns>
    <columns>UPDATEDBY_USER</columns>
    <columns>LAST_UPDATE</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>UPDATEDBY_USER</field>
        <operation>contains</operation>
        <value>Linux</value>
    </filters>
    <label>Enrollments for a Training Session</label>
</ListView>