force-app/main/default/objects/Enrollment__c/listViews/LF_Training_Bootcamp_June_2020.listView-meta.xml
<ListView>
    <fullName>LF_Training_Bootcamp_June_2020</fullName>
    <columns>NAME</columns>
    <columns>Completion_Date__c</columns>
    <columns>Exam_Status__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>isBootcampbundle__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>LF Training Bootcamp June 2020</label>
</ListView>