force-app/main/default/objects/Enrollment__c/listViews/LFD134.listView-meta.xml
<ListView>
    <fullName>LFD134</fullName>
    <columns>NAME</columns>
    <columns>Enrollment_Date__c</columns>
    <columns>Product_Name__c</columns>
    <columns>Ext_Product_Id__c</columns>
    <columns>Alternate_Email__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Source__c</field>
        <operation>equals</operation>
        <value>Edx</value>
    </filters>
    <filters>
        <field>Product_Code__c</field>
        <operation>equals</operation>
        <value>LFD134x</value>
    </filters>
    <label>LFD134x</label>
</ListView>