force-app/main/default/objects/Enrollment__c/listViews/Quickstart.listView-meta.xml
<ListView>
    <fullName>Quickstart</fullName>
    <columns>NAME</columns>
    <columns>Completion_Date__c</columns>
    <columns>Enrollment_Date__c</columns>
    <columns>ExpirationDate__c</columns>
    <columns>Source__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Source__c</field>
        <operation>equals</operation>
        <value>QuickStart</value>
    </filters>
    <label>Quickstart</label>
</ListView>